--- a/index.html
+++ b/index.html
@@ -6,11 +6,47 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="css/leaflet.css">
-        <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="./resources/ol.css">
+        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+        <link rel="stylesheet" type="text/css" href="resources/horsey.min.css">
+        <link rel="stylesheet" type="text/css" href="resources/ol3-search-layer.min.css">
+        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
+        <link rel="stylesheet" href="./resources/qgis2web.css">
+<style>
+.search-layer {
+  top: 65px;
+  left: .5em;
+}
+.ol-touch .search-layer {
+  top: 80px;
+}
+</style>
+        <style>
+        html, body {
+            background-color: #ffffff;
+        }
+        .ol-control button {
+            background-color: #f8f8f8 !important;
+            color: #000000 !important;
+            border-radius: 0px !important;
+        }
+        .ol-zoom, .geolocate, .gcd-gl-control .ol-control {
+            background-color: rgba(255,255,255,.4) !important;
+            padding: 3px !important;
+        }
+        .ol-scale-line {
+            background: none !important;
+        }
+        .ol-scale-line-inner {
+            border: 2px solid #f8f8f8 !important;
+            border-top: none !important;
+            background: rgba(255, 255, 255, 0.5) !important;
+            color: black !important;
+        }
+        </style>
         <style>
         #map {
-            width: 853px;
+            width: 1000px;
             height: 778px;
         }
         </style>
@@ -18,311 +54,23 @@
     </head>
     <body>
         <div id="map">
+            <div id="popup" class="ol-popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
+            </div>
         </div>
-        <script src="js/qgis2web_expressions.js"></script>
-        <script src="js/leaflet.js"></script>
-        <script src="js/leaflet.rotatedMarker.js"></script>
-        <script src="js/leaflet.pattern.js"></script>
-        <script src="js/leaflet-hash.js"></script>
-        <script src="js/Autolinker.min.js"></script>
-        <script src="js/rbush.min.js"></script>
-        <script src="js/labelgun.min.js"></script>
-        <script src="js/labels.js"></script>
-        <script src="data/ETH_adm3_Sustainability_0.js"></script>
-        <script>
-        var map = L.map('map', {
-            zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[1.936651893368003,32.62528295516967],[16.28540473390556,48.36083536148083]]);
-        var hash = new L.Hash(map);
-        map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
-        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
-        var bounds_group = new L.featureGroup([]);
-        function setBounds() {
-        }
-        function pop_ETH_adm3_Sustainability_0(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <th scope="row">Country</th>\
-                        <td>' + (feature.properties['NAME_0'] !== null ? autolinker.link(feature.properties['NAME_0'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">NAME_1</th>\
-                        <td>' + (feature.properties['NAME_1'] !== null ? autolinker.link(feature.properties['NAME_1'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">NAME_2</th>\
-                        <td>' + (feature.properties['NAME_2'] !== null ? autolinker.link(feature.properties['NAME_2'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">NAME_3</th>\
-                        <td>' + (feature.properties['NAME_3'] !== null ? autolinker.link(feature.properties['NAME_3'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Total area (ha) </th>\
-                        <td>' + (feature.properties['area'] !== null ? autolinker.link(feature.properties['area'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Vegetable suitable area (ha)</th>\
-                        <td>' + (feature.properties['crop'] !== null ? autolinker.link(feature.properties['crop'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Wet Season- Rainfed area (ha)</th>\
-                        <td>' + (feature.properties['s1_rf'] !== null ? autolinker.link(feature.properties['s1_rf'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Wet Season- GW irrigated area (ha)</th>\
-                        <td>' + (feature.properties['s1_gw'] !== null ? autolinker.link(feature.properties['s1_gw'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Wet Season- SW irrigated area (ha)</th>\
-                        <td>' + (feature.properties['s1_sw'] !== null ? autolinker.link(feature.properties['s1_sw'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Wet Season2- Rainfed area (ha)</th>\
-                        <td>' + (feature.properties['s3_rf'] !== null ? autolinker.link(feature.properties['s3_rf'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Wet Season2- GW irrigated area (ha)</th>\
-                        <td>' + (feature.properties['s3_gw'] !== null ? autolinker.link(feature.properties['s3_gw'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Wet Season2- SW irrigated area (ha)</th>\
-                        <td>' + (feature.properties['s3_sw'] !== null ? autolinker.link(feature.properties['s3_sw'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Technology-GW-Manual</th>\
-                        <td>' + (feature.properties['an_gw_ml'] !== null ? autolinker.link(feature.properties['an_gw_ml'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Technology-GW-Solar-1</th>\
-                        <td>' + (feature.properties['an_gw_sl1'] !== null ? autolinker.link(feature.properties['an_gw_sl1'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Technology-GW-Solar-2</th>\
-                        <td>' + (feature.properties['an_gw_sl2'] !== null ? autolinker.link(feature.properties['an_gw_sl2'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Technology-GW-Grid</th>\
-                        <td>' + (feature.properties['an_gw_gl'] !== null ? autolinker.link(feature.properties['an_gw_gl'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Technology-GW-Fuel</th>\
-                        <td>' + (feature.properties['an_gw_fl'] !== null ? autolinker.link(feature.properties['an_gw_fl'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['t_area'] !== null ? autolinker.link(feature.properties['t_area'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['v_area'] !== null ? autolinker.link(feature.properties['v_area'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['gwbml'] !== null ? autolinker.link(feature.properties['gwbml'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['gwbsl1'] !== null ? autolinker.link(feature.properties['gwbsl1'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['gwbsl2'] !== null ? autolinker.link(feature.properties['gwbsl2'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['gwbge'] !== null ? autolinker.link(feature.properties['gwbge'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['gwbfe'] !== null ? autolinker.link(feature.properties['gwbfe'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['gwb'] !== null ? autolinker.link(feature.properties['gwb'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_ETH_adm3_Sustainability_0_0(feature) {
-            switch(String(feature.properties['gwb'])) {
-                case '100000':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(247,247,247,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(150,150,150,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '100101':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(15,212,64,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '100111':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(116,221,198,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '101101':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(219,64,224,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '101111':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(108,236,48,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '110101':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(217,175,113,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '110111':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(220,59,50,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '111000':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(70,91,231,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '111101':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(141,88,214,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '111111':
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(195,212,88,1.0)',
-                interactive: true,
-            }
-                    break;
-                default:
-                    return {
-                pane: 'pane_ETH_adm3_Sustainability_0',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(102,191,235,1.0)',
-                interactive: true,
-            }
-                    break;
-            }
-        }
-        map.createPane('pane_ETH_adm3_Sustainability_0');
-        map.getPane('pane_ETH_adm3_Sustainability_0').style.zIndex = 400;
-        map.getPane('pane_ETH_adm3_Sustainability_0').style['mix-blend-mode'] = 'normal';
-        var layer_ETH_adm3_Sustainability_0 = new L.geoJson(json_ETH_adm3_Sustainability_0, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_ETH_adm3_Sustainability_0',
-            layerName: 'layer_ETH_adm3_Sustainability_0',
-            pane: 'pane_ETH_adm3_Sustainability_0',
-            onEachFeature: pop_ETH_adm3_Sustainability_0,
-            style: style_ETH_adm3_Sustainability_0_0,
-        });
-        bounds_group.addLayer(layer_ETH_adm3_Sustainability_0);
-        map.addLayer(layer_ETH_adm3_Sustainability_0);
-        var baseMaps = {};
-        L.control.layers(baseMaps,{'ETH_adm3_Sustainability<br /><table><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_NotsuitableTech0.png" /></td><td>Not suitable Tech</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_ManualSolartype21.png" /></td><td>Manual , Solar type 2</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_ManualSolartype1Solartype22.png" /></td><td>Manual, Solar type 1, Solar type 2</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_ManualSolartype2Grid3.png" /></td><td>Manual, Solar type 2, Grid</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_ManualSolartype1Solartype2Grid4.png" /></td><td>Manual, Solar type 1, Solar type 2, Grid</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_ManualSolartype2Fuel5.png" /></td><td>Manual, Solar type 2, Fuel</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_ManualSolartype1Solartype2Fuel6.png" /></td><td>Manual, Solar type 1, Solar type 2, Fuel</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_GridFuel7.png" /></td><td>Grid, Fuel</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_ManualSolartype2GridFuel8.png" /></td><td>Manual, Solar type 2, Grid, Fuel</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_ManualSolartype1Solartype2GridFuel9.png" /></td><td>Manual, Solar type 1, Solar type 2, Grid, Fuel</td></tr><tr><td style="text-align: center;"><img src="legend/ETH_adm3_Sustainability_0_10.png" /></td><td></td></tr></table>': layer_ETH_adm3_Sustainability_0,}).addTo(map);
-        setBounds();
-        </script>
+        <script src="resources/qgis2web_expressions.js"></script>
+        <script src="resources/polyfills.js"></script>
+        <script src="./resources/functions.js"></script>
+        <script src="./resources/ol.js"></script>
+        <script src="http://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList,URL"></script>
+        <script src="resources/horsey.min.js"></script>
+        <script src="resources/ol3-search-layer.js"></script>
+        <script src="./resources/ol-layerswitcher.js"></script>
+        <script src="layers/LandCover_0.js"></script><script src="layers/River_1.js"></script><script src="layers/GNDivision_2.js"></script><script src="layers/MWS003_3.js"></script>
+        <script src="styles/LandCover_0_style.js"></script><script src="styles/River_1_style.js"></script><script src="styles/GNDivision_2_style.js"></script><script src="styles/MWS003_3_style.js"></script>
+        <script src="./layers/layers.js" type="text/javascript"></script> 
+        <script src="./resources/Autolinker.min.js"></script>
+        <script src="./resources/qgis2web.js"></script>
     </body>
 </html>
