--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         </style>
         <title></title>
     </head>
+    	    <body dir="ltr">
+        Open on Google map 
+		<a href="https://www.google.com/maps/d/edit?mid=1ecc2dcXcQeuKlH2XlFsGBliOYYiCKcc&ll=7.244616068294622%2C80.65398449999999&z=14">MWS003KML</a>
+    </body>
     <body>
         <div id="map">
             <div id="popup" class="ol-popup">
@@ -73,4 +77,5 @@
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
     </body>
+    
 </html>
