--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </head>
     	    <body dir="ltr">
         Open on Google map 
-		<a href="https://www.google.com/maps/d/edit?mid=1ecc2dcXcQeuKlH2XlFsGBliOYYiCKcc&ll=7.244616068294622%2C80.65398449999999&z=14">MWS003KML</a>
+		<a href="https://www.google.com/maps/d/viewer?mid=1ecc2dcXcQeuKlH2XlFsGBliOYYiCKcc&ll=7.244617145624426%2C80.65398449999999&z=14">MWS003KML</a>
     </body>
     <body>
         <div id="map">
