--- a/VICT/index.html
+++ b/VICT/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VICT-Sustainable Limites-Tech</title>
+    <title>VICT-Sustainable Limits-Tech</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
 	            #map { height: 600px; width: 100%; }
@@ -75,7 +75,7 @@
         </div>
 
         <!--<p id="result"></p>-->	
-		<h1>Vegetable Growing Suitable Area -Sustainable Limite under above Condition </h1>		
+		<h1>Vegetable Growing Suitable Area -Sustainable Limits under above Condition </h1>		
 
 
     </form>
