--- a/VICT/index.html
+++ b/VICT/index.html
@@ -52,9 +52,9 @@
             <label for="season">Season:</label>
             <select id="season" name="season" onchange="handleSelection()">
                 <option value="">Select a season</option>
-                <option value="s1">Wet</option>
-                <option value="s2">Dry</option>
-                <option value="s3">Wet2</option>
+                <option value="s1">Rainy Season</option>
+                <option value="s2">Dry Season</option>
+                <option value="s3">Rainy Season 2</option>
                 <option value="an">Annual</option>
             </select>
 			
