--- a/VICT/index.html
+++ b/VICT/index.html
@@ -249,8 +249,8 @@ function onEachFeature(feature, layer) {
 			pumpTypeDropdown.innerHTML = '<option value="">Select a pump type</option>';
             var optionTexts = {
                 'sw': [
-                    { value: 'all', text: 'Without consider' },
-                    { value: 'ml', text: 'Manual (max. distance: 50m)' },
+                    { value: 'all', text: 'All pump' },
+                    { value: 'ml', text: 'Manual pump (max. distance: 50m)' },
                     { value: 'sl1', text: 'Solar pump (max. distance: 100m)' },
                     { value: 'sl2', text: 'Solar pump (max. distance: 250m)' },
                     { value: 'gl1', text: 'Electric pump (max. distance: 100m)' },
@@ -259,8 +259,8 @@ function onEachFeature(feature, layer) {
                     { value: 'fl2', text: 'Fuel pump (max. distance: 250m)' }
                 ],
                 'gw': [
-                    { value: 'all', text: 'Without consider' },
-                    { value: 'ml', text: 'Manual (max. depth: 25m)' },
+                    { value: 'all', text: 'All pump' },
+                    { value: 'ml', text: 'Manual pump(max. depth: 25m)' },
                     { value: 'sl1', text: 'Solar pump (max. depth: 7m)' },
                     { value: 'sl2', text: 'Solar pump (max. depth: 25m)' },
                     { value: 'gl1', text: 'Electric pump (max. depth: 7m)' },
