--- a/VICT/index.html
+++ b/VICT/index.html
@@ -157,7 +157,11 @@ function onEachFeature(feature, layer) {
     if (feature.properties[attribute2]) {
         popupContent += "<strong>Vegetable suitable Area:</strong> "+ ":</strong> " + formatNumber(feature.properties[attribute2]) + "<br>";
     }
-
+	
+    // Add the second attribute row with formatting
+    if (feature.properties[attribute2]) {
+        popupContent += "<strong>Sustainable Area (Selected Season/Water Source/ Crop W/R:</strong> "+ ":</strong> " + formatNumber(feature.properties[attribute2]) + "<br>";
+    }
     // Add the dynamically selected attribute with formatting
     var selectedAttribute = document.getElementById('attdata').textContent.trim().replace(/"/g, '');
     if (feature.properties[selectedAttribute] !== undefined && feature.properties[selectedAttribute] !== null) {
