--- a/VICT/index.html
+++ b/VICT/index.html
@@ -47,7 +47,7 @@
                 <!-- <option value="rf">Rainfed</option>-->
                 <option value="sw">Surface Water</option>
                 <option value="gw">Groundwater</option>
-		<option value="_">Surface Water+Groundwater</option> 
+		<option value="gw">Surface Water+Groundwater</option> 
             </select>
 			
             <label for="season">Season:</label>
