--- a/VICT2/index.html
+++ b/VICT2/index.html
@@ -160,8 +160,8 @@ function onEachFeature(feature, layer) {
     }
 	
     // Add the second attribute row with formatting
-    if (feature.properties[attribute2]) {
-        popupContent += "<strong>Sustainable Area (Selected Season/Water Source/ Crop W/R:</strong> "+ ":</strong> " + "####"+ "<br>";
+    //if (feature.properties[attribute2]) {
+        //popupContent += "<strong>Sustainable Area (Selected Season/Water Source/ Crop W/R:</strong> "+ ":</strong> " + "####"+ "<br>";
 	//popupContent += "<strong>Sustainable Area (Selected Season/Water Source/ Crop W/R:</strong> "+ ":</strong> " + formatNumber(feature.properties[attribute2]) + "<br>";
     }
     // Add the dynamically selected attribute with formatting
