--- a/VICT2/index.html
+++ b/VICT2/index.html
@@ -116,7 +116,8 @@
                    d > 5000   ? '#FD8D3C' :
                    d > 2000   ? '#FEB24C' :
                    d > 0   ? '#FED976' :
-                              '#FFEDA0';
+		    '#808080';
+                              //'#FFEDA0';
         }
 
         // Function to bind popups with dynamic attributes
