--- a/VICT2/index.html
+++ b/VICT2/index.html
@@ -44,7 +44,7 @@
             <select id="waterSource" name="waterSource" onchange="handleSelection()">
                 <option value="">Select a water source</option>
                 <!-- <option value="all">All Sustainable Area</option>-->
-                <!-- <option value="rf">Rainfed</option>-->
+                <option value="rf">Rainfed</option>
                 <option value="sw">Surface Water</option>
                 <option value="gw">Groundwater</option>
 		<option value="sgw">Surface Water+Groundwater</option> 
