--- a/VICT2/index.html
+++ b/VICT2/index.html
@@ -108,17 +108,33 @@
         }
 
         // Function to get color based on attribute value
-        function getColor(d) {
-            return d > 100000 ? '#800026' :
-                   d > 5000 ? '#BD0026' :
-                   d > 2000  ? '#E31A1C' :
-                   d > 1000  ? '#FC4E2A' :
-                   d > 500   ? '#FD8D3C' :
-                   d > 200   ? '#FEB24C' :
-                   d > 0   ? '#FED976' :
-		    '#808080';
+        //function getColor(d) {
+            //return d > 100000 ? '#800026' :
+                  // d > 5000 ? '#BD0026' :
+                  // d > 2000  ? '#E31A1C' :
+                 //  d > 1000  ? '#FC4E2A' :
+                  // d > 500   ? '#FD8D3C' :
+                //   d > 200   ? '#FEB24C' :
+               //    d > 0   ? '#FED976' :
+		  //  '#808080';
                               //'#FFEDA0';
-        }
+       // }
+// Function to get color based on attribute value
+function getColor(d) {
+    return d > 5000 ? '#800026' :       // More
+           d > 2000 ? '#BD0026' :       // 5000
+           d > 1000 ? '#E31A1C' :       // 2000
+           d > 500  ? '#FC4E2A' :       // 1000
+           d > 200  ? '#FD8D3C' :       // 500
+           d > 100  ? '#FEB24C' :       // 200
+           d > 50   ? '#FED976' :       // 100
+           d > 20   ? '#FFEDA0' :       // 50
+           d > 10   ? '#FFFFB2' :       // 20
+           d > 0    ? '#FFFFD4' :       // 10
+                      '#808080';        // 0
+}
+
+	    
 
         // Function to bind popups with dynamic attributes
         //function onEachFeature(feature, layer) {
