--- a/VICT2/index.html
+++ b/VICT2/index.html
@@ -121,16 +121,16 @@
        // }
 // Function to get color based on attribute value
 function getColor(d) {
-    return d > 5000 ? '#800026' :       // More
-           d > 2000 ? '#BD0026' :       // 5000
-           d > 1000 ? '#E31A1C' :       // 2000
-           d > 500  ? '#FC4E2A' :       // 1000
-           d > 200  ? '#FD8D3C' :       // 500
-           d > 100  ? '#FEB24C' :       // 200
-           d > 50   ? '#FED976' :       // 100
-           d > 20   ? '#FFEDA0' :       // 50
-           d > 10   ? '#FFFFB2' :       // 20
-           d > 0    ? '#FFFFD4' :       // 10
+    return d > 5000 ? '#001f4d' :       // More (dark blue)
+           d > 2000 ? '#003366' :       // 5000
+           d > 1000 ? '#004080' :       // 2000
+           d > 500  ? '#00509e' :       // 1000
+           d > 200  ? '#0066cc' :       // 500
+           d > 100  ? '#0099ff' :       // 200
+           d > 50   ? '#66b3ff' :       // 100
+           d > 20   ? '#99ccff' :       // 50
+           d > 10   ? '#cce5ff' :       // 20
+           d > 0    ? '#e6f7ff' :       // 10
                       '#808080';        // 0
 }
 
