--- a/VICT2/Driver.html
+++ b/VICT2/Driver.html
@@ -43,10 +43,10 @@
         // Function to style features and handle selection (kept as in your example)
 
         // Example SVG file path
-        var svgUrl = 'RoadMap.svg'; // Replace with the path to your SVG file
+        var svgUrl = 'DistanceRoad.png'; // Replace with the path to your SVG file
 
         // Define the bounds for the SVG overlay (adjust based on the region you want to cover)
-        var svgBounds = [[3.5, 32], [10, 42]]; // Replace with actual coordinates
+        var svgBounds = [[1.957752003,32.2511145883485], [ 16.2612688037521,48.73736459]]; // Replace with actual coordinates
 
         // Add the SVG overlay
         var svgOverlay = L.svgOverlay(svgUrl, svgBounds).addTo(map);
