--- a/VICT2/Driver.html
+++ b/VICT2/Driver.html
@@ -43,7 +43,7 @@
         // Function to style features and handle selection (kept as in your example)
 
         // Example SVG file path
-        var svgUrl = 'DistanceRoad.png'; // Replace with the path to your SVG file
+        var svgUrl = 'DistanceRoad5.png'; // Replace with the path to your SVG file
 
         // Define the bounds for the SVG overlay (adjust based on the region you want to cover)
         var svgBounds = [[1.957752003,32.2511145883485], [ 16.2612688037521,48.73736459]]; // Replace with actual coordinates
