--- a/VICT5/Comparizon/comp.html
+++ b/VICT5/Comparizon/comp.html
@@ -115,7 +115,7 @@
         <!-- Tables container -->
         <div class="tables-container">
             <!-- Table for feature attributes -->
-            <h3>All pump- Suitability:</h3>
+            <h3>Technology Suitability Area (All Pumps in Ha:</h3>
             <table id="attributesTable" border="1">
                 <thead>
                     <tr>
