--- a/VICT5/Comparizon/comp.html
+++ b/VICT5/Comparizon/comp.html
@@ -143,7 +143,7 @@
             </table>
 
             <!-- Simpler attributes table -->
-            <h3>Sustainable Area:</h3>
+            <h3>Sustainable Area in Ha:</h3>
             <table id="simpleAttributesTable" border="1">
                 <thead>
                     <tr>
