--- a/VICT5/ETH_WS/Combine.html
+++ b/VICT5/ETH_WS/Combine.html
@@ -158,7 +158,8 @@
     </select>
 
 	    <button id="toggleGeoJson" class="toggle-button">Admin Boundary</button>
-		
+	    <!-- Fixed photo in the bottom left -->
+    <img src="default_photo.jpg" alt="Fixed Photo" class="fixed-photo" id="fixedPhoto"> <!-- Fixed Photo Image -->	
     <div class="container">
         <!-- Map container -->
         <div id="map"></div>
