--- a/VICT5/ETH_WS/Combine.html
+++ b/VICT5/ETH_WS/Combine.html
@@ -167,7 +167,7 @@
         <!-- Tables container -->
         <div class="tables-container">
             <!-- Table for feature attributes -->
-            <h3>All pump- Suitability:</h3>
+            <h3>Technology Suitability Area (All Pumps) in Ha:</h3>
             <table id="attributesTable" border="1">
                 <thead>
                     <tr>
@@ -195,7 +195,7 @@
             </table>
 
             <!-- Simpler attributes table -->
-            <h3>Sustainable Area:</h3>
+            <h3>Sustainable Area in Ha:</h3>
             <table id="simpleAttributesTable" border="1">
                 <thead>
                     <tr>
