--- a/VICT5/ETH_WS/Combine.html
+++ b/VICT5/ETH_WS/Combine.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoJSON Map with Layer Selection and Feature Attributes</title>
+    <title>Water Sources</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 	
