--- a/VICT5/index.html
+++ b/VICT5/index.html
@@ -106,7 +106,7 @@
             </select>
         </div>
     <!-- Blue button -->
-    <button class="Ethiopia Driver" onclick="openBluePage()">Ethiopia Driver</button>
+    <button class="blue-button" onclick="openBluePage()">Ethiopia Driver</button>
 
     <!-- Red button -->
     <button class="red-button" onclick="openRedPage()">Ethiopia Comparison</button>
