--- a/VICT5/index.html
+++ b/VICT5/index.html
@@ -114,7 +114,7 @@
     <script>
         // Function to open the blue page in a new window
         function openBluePage() {
-            window.open('darshanacw.github.io/VICT5/Driv/driver.html', '_blank');
+            window.open('https://darshanacw.github.io/VICT5/Driv/driver.html', '_blank');
         }
 
         // Function to open the red page in a new window
