--- a/VICT5/index.html
+++ b/VICT5/index.html
@@ -128,12 +128,12 @@
     <!-- Blue button -->
     <button class="blue-button" onclick="openBluePage()">Ethiopia Driver</button>
     <!-- Blue-mali button -->
-    <button class="blue-mali-button" onclick="openBlueMaliPage()">Ethiopia Driver</button>
+    <button class="blue-mali-button" onclick="openBlueMaliPage()">Mali Driver</button>
 
     <!-- Red button -->
     <button class="red-button" onclick="openRedPage()">Ethiopia Comparison</button>
     <!-- Red-mali button -->
-    <button class="red-button" onclick="openRedMaliPage()">Ethiopia Comparison</button>
+    <button class="red-mali-button" onclick="openRedMaliPage()">Mali Comparison</button>
     <script>
         // Function to open the blue page in a new window
         function openBluePage() {
