--- a/QGIS/index.html
+++ b/QGIS/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Leaflet Map with External GeoJSON</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <style>
+    #map {
+      height: 600px;
+      width: 100%;
+    }
+  </style>
+</head>
+<body>
+  <h3>Leaflet Map with GeoJSON Overlay</h3>
+  <div id="map"></div>
 
+  <!-- Leaflet JS library -->
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+
+  <script>
+    // Initialize the map
+    const map = L.map('map').setView([7.8731, 80.7718], 8); // Center the map at specific coordinates
+
+    // Add base tile layer from OpenStreetMap
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '© OpenStreetMap contributors'
+    }).addTo(map);
+
+    // Load external GeoJSON file (Replace 'sample-data.geojson' with the path to your actual GeoJSON file)
+    fetch('sample-data.geojson')
+      .then(response => response.json())
+      .then(data => {
+        // Add the GeoJSON layer to the map
+        L.geoJSON(data, {
+          onEachFeature: function (feature, layer) {
+            if (feature.properties && feature.properties.popupContent) {
+              layer.bindPopup(feature.properties.popupContent); // Display popup for each feature
+            }
+          }
+        }).addTo(map);
+      })
+      .catch(error => {
+        console.error('Error loading GeoJSON:', error);
+      });
+  </script>
+</body>
+</html>
