--- a/QGIS/mws_index.html
+++ b/QGIS/mws_index.html
@@ -31,7 +31,7 @@
         }).addTo(map);
 
         // Fetch the GeoJSON data from the external file
-        fetch('mws.geojson')
+        fetch('mws4326.geojson')
             .then(response => response.json())
             .then(data => {
                 // Add the GeoJSON layer to the map
